# icomo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .releaserc.json  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  pytest.yaml  release.yaml  ruff.yaml
comodi/: __init__.py  comp_model.py  examples.py  pytensor_op.py  slow_modulation.py  tools.py
docs/: conf.py  contributing.md  erlang_kernel.ipynb  example.ipynb  index.md  index.rst  installation.md  make.bat  welcome.md
docs/api/: comp_model.rst  diffrax_wrapper.rst  experimental.rst  jax2pytensor.rst  references.rst  tree_tools.rst
icomo/: __init__.py  comp_model.py  compt_model.py  diffrax_wrapper.py  examples.py  jax2pytensor.py  pytensor_op.py  slow_modulation.py  tools.py  tree_tools.py
icomo/experimental/: __init__.py  slow_modulation.py
notebooks/: covid_immunity_model.ipynb  example1.csv  example1_SIR.csv  optimize_restrictions.ipynb  seropositivity_model.ipynb
tests/: __init__.py  test_comodi.py  test_comp_model.py  test_diffrax.py  test_example_notebook.py  test_jax_compilation.py
