[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "comodi"
authors = [
  { name = "Jonas Dehning", email = "jonas.dehning@ds.mpg.de" },
]
description = "This toolbox aims to simplify the construction of compartmental models and the inference of their parameters"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
requires-python = '>=3.8.1'
dependencies = [
"pytest >= 7.3.2",
"black >= 23.3.0",
"isort >= 5.12.0",
"pre-commit >= 3.3.2",
"ruff >= 0.0.272",
"mypy >= 1.3.0",
"pydocstyle >= 6.3.0",
#"m2r",
    "ipython <  8",
    "ipykernel >= 6.0.0","Sphinx >= 6.2.1",
    "sphinx-rtd-theme >= 1.2.2",
    "importlib-metadata >= 6.5.1",
    "myst-parser >= 0.19.2",
    "nbsphinx >= 0.9.2",
    "pandoc >= 2.3",

]

[project.urls]
Homepage = "https://github.com/Priesemann-Group/comodi"
"Bug Tracker" = "https://github.com/Priesemann-Group/comodi/issues"
Discussions = "https://github.com/Priesemann-Group/comodi/discussions"
Changelog = "https://github.com/Priesemann-Group/comodi/releases"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ["py38"]
force-exclude = '''(?x)(
    docs/*
  | .*\\.egg-info
)'''  # TOML's single-quoted strings do not require escaping backslashes

[tool.isort]
ensure_newline_before_comments = true
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "*.egg-info"]

[tool.ruff]
line-length = 88
force-exclude = true
src = ["comodi"]
exclude = [
  'docs',
]
select = [
  "F",   # pyflakes
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
no_strict_optional = false

[tool.setuptools]
packages = ["comodi"]
